# advent-of-code

./: .clang-format  .gitignore  CMakeLists.txt  days.h  main.cpp  run.sh  template.hpp
2022/c++/: CMakeLists.txt
2022/c++/inc/: utils.h
2022/c++/inputs/: 11.in
2022/c++/src/: advent_of_code.cpp  day_03.cpp  day_04.cpp  day_05.cpp  day_06.cpp  day_08.cpp  day_09.cpp  day_11.cpp  utils.cpp
2024/zig/.zig-cache/o/05e9e889acd9a40c888c369e59e90cc9/: test
2024/zig/.zig-cache/o/083a058e18dbc2ddb21c59b743415af1/: zig
2024/zig/.zig-cache/o/305df34c568a9f005207a8be4839aac1/: zig
2024/zig/.zig-cache/o/3b85b5e6f8c467cabb7ff09fc4dba156/: zig
2024/zig/.zig-cache/o/3bdb85810bc9af927214f8efa11b07cd/: zig
2024/zig/.zig-cache/o/3e5ff5c8a196f25f0dde933f6a0dead9/: zig
2024/zig/.zig-cache/o/6fb3fa9df77f8f2ddf72190057e0d038/: zig
2024/zig/.zig-cache/o/7014a42ebfdb3ea625c0810fd0464dc1/: zig
2024/zig/.zig-cache/o/72fed69be1f5f9ebb4f0ef6897ce95d0/: zig
2024/zig/.zig-cache/o/757d272f179d6e91ce26070fc33e801a/: zig
2024/zig/.zig-cache/o/7ad0204082a7accb29086d690898cc56/: zig
2024/zig/.zig-cache/o/83029286f425d6028960633db87d452e/: zig
2024/zig/.zig-cache/o/8ce3621e41a5027c9f6ad8928c435f12/: zig
2024/zig/.zig-cache/o/ab195a9f707a12f61a32a531ff5623a0/: zig
2024/zig/.zig-cache/o/b316f44bf9c851d195eaf1ddb930a42f/: zig
2024/zig/.zig-cache/o/bdde7a487cda46804f9f8982eebc7f5f/: test
2024/zig/.zig-cache/o/c1435b9a88f190e428818f52fb9117c3/: zig
2024/zig/.zig-cache/o/c21277c4c76095a781d1836236291570/: zig
2024/zig/.zig-cache/o/dd9e8712118082ea68f3356fcc139b8e/: zig
2024/zig/.zig-cache/o/dee5d4f12218ea0609cc1314c6b91f15/: zig
2024/zig/.zig-cache/o/e4992e87484cf3e9790a93222e2fc1c5/: zig
2024/zig/src/: day01.zig  main.zig
inc/: days.h  utils.h
src/: advent_of_code.cpp  day_01.cpp  day_02.cpp  day_03.cpp  day_04.cpp  day_04_improved.cpp  day_05.cpp  day_06.cpp  day_07.cpp  day_08.cpp  day_10.cpp  day_template.cpp
